// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FillInTheBlank component projector view inactive renders 1`] = `
<FillInTheBlank
  data={
    Object {
      "play": Object {
        "cues": Array [
          "the",
          "a",
        ],
        "instructions": "Fill in the blank with one of the highlighted words.",
        "prompt": "We waited in line at the store. ___ line was very long!",
      },
      "teach": Object {
        "script": Array [
          Object {
            "data": Object {
              "body": "<p><strong>Say:</strong> Let’s practice. With your partner, decide whether to use <em>a</em> or <em>the</em> in this sentence. Discuss why as well.</p>",
              "heading": "Ask pairs to fill in the blank with \\"a\\" or \\"the.\\"",
            },
            "type": "STEP-HTML",
          },
          Object {
            "type": "T-REVIEW",
          },
          Object {
            "data": Object {
              "body": "<p><em>Ask students to share their explanations for why they chose “a” or why they chose “the.”</em></p>
<p><strong>Say: </strong>Thank you for sharing your ideas! As many of you explained, we use <em>the</em> here because we're talking about a specific line—the one we waited in! The sentence tells us which line we’re talking about.</p>",
              "heading": "Select 1 correct response and 1 incorrect responses to display and discuss. ",
            },
            "type": "STEP-HTML",
          },
        ],
        "title": "Paired Practice",
      },
    }
  }
  mode={null}
  projector={true}
  selected_submission_order={null}
  selected_submissions={null}
  studentCount={1}
  submissions={null}
>
  <div
    className="fill-in-the-blank student-slide-wrapper"
  >
    <div
      className="all-but-submitted-bar"
    >
      <ProjectorHeader
        studentCount={1}
        submissions={null}
      >
        <div
          className="projector-header-section"
        >
          <div
            className="students-type-tag tag"
          >
            <img
              alt="Laptop Icon"
              src="undefined/images/icons/laptop-glyph.svg"
            />
            <span>
              Students type response
            </span>
          </div>
          <p
            className="answered-count"
          >
            0 of 1 have responded
          </p>
        </div>
      </ProjectorHeader>
      <PromptSection
        mode={null}
        promptElement={
          <div
            className="prompt"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "We&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "waited&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "in&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "line&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "at&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "the&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "store.&nbsp;",
                }
              }
            />
            <input
              aria-label="Complete the sentence with one of the following options: the, a"
              autoComplete="off"
              className="disabled"
              disabled={true}
              id="input0"
              onChange={[Function]}
              style={
                Object {
                  "width": "70px",
                }
              }
              type="text"
              value=""
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "line&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "was&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "very&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "long!&nbsp;",
                }
              }
            />
          </div>
        }
      >
        <div
          className="prompt"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "We&nbsp;",
              }
            }
            key="We0"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "waited&nbsp;",
              }
            }
            key="waited1"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "in&nbsp;",
              }
            }
            key="in2"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "line&nbsp;",
              }
            }
            key="line3"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "at&nbsp;",
              }
            }
            key="at4"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "the&nbsp;",
              }
            }
            key="the5"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "store.&nbsp;",
              }
            }
            key="store.6"
          />
          <input
            aria-label="Complete the sentence with one of the following options: the, a"
            autoComplete="off"
            className="disabled"
            disabled={true}
            id="input0"
            key="100"
            onChange={[Function]}
            style={
              Object {
                "width": "70px",
              }
            }
            type="text"
            value=""
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "line&nbsp;",
              }
            }
            key="line0"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "was&nbsp;",
              }
            }
            key="was1"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "very&nbsp;",
              }
            }
            key="very2"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "long!&nbsp;",
              }
            }
            key="long!3"
          />
        </div>
      </PromptSection>
      <Cues
        cues={
          Array [
            "the",
            "a",
          ]
        }
        displayArrowAndText={true}
      >
        <div
          className="cues"
        >
          <Cue
            cue="the"
            key="0the"
          >
            <div
              className="cue"
            >
              the
            </div>
          </Cue>
          <Cue
            cue="a"
            key="1a"
          >
            <div
              className="cue"
            >
              a
            </div>
          </Cue>
          <img
            alt="Arrow Icon"
            src="undefined/images/icons/pointing-arrow.svg"
          />
          <CueExplanation
            text="choose one"
          >
            <div
              className="cue-explanation"
            >
              choose one
            </div>
          </CueExplanation>
        </div>
      </Cues>
      <Feedback
        feedback={
          <p
            dangerouslySetInnerHTML={
              Object {
                "__html": "Fill in the blank with one of the highlighted words.",
              }
            }
          />
        }
        feedbackType="default"
      >
        <div
          aria-live="assertive"
          className="student-feedback-container default"
          role="status"
        >
          <div
            className="feedback-row student-feedback-inner-container"
          >
            <img
              alt="Directions Icon"
              className="info"
              src="https://assets.quill.org/images/icons/direction.svg"
            />
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Fill in the blank with one of the highlighted words.",
                }
              }
            />
          </div>
        </div>
      </Feedback>
      <SubmitButton
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="question-button-group"
        >
          <button
            className="quill-button primary contained large focus-on-light disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Submit
          </button>
        </div>
      </SubmitButton>
    </div>
  </div>
</FillInTheBlank>
`;

exports[`FillInTheBlank component projector view when an answer is being displayed renders 1`] = `
<FillInTheBlank
  data={
    Object {
      "play": Object {
        "cues": Array [
          "the",
          "a",
        ],
        "instructions": "Fill in the blank with one of the highlighted words.",
        "prompt": "We waited in line at the store. ___ line was very long!",
      },
      "teach": Object {
        "script": Array [
          Object {
            "data": Object {
              "body": "<p><strong>Say:</strong> Let’s practice. With your partner, decide whether to use <em>a</em> or <em>the</em> in this sentence. Discuss why as well.</p>",
              "heading": "Ask pairs to fill in the blank with \\"a\\" or \\"the.\\"",
            },
            "type": "STEP-HTML",
          },
          Object {
            "type": "T-REVIEW",
          },
          Object {
            "data": Object {
              "body": "<p><em>Ask students to share their explanations for why they chose “a” or why they chose “the.”</em></p>
<p><strong>Say: </strong>Thank you for sharing your ideas! As many of you explained, we use <em>the</em> here because we're talking about a specific line—the one we waited in! The sentence tells us which line we’re talking about.</p>",
              "heading": "Select 1 correct response and 1 incorrect responses to display and discuss. ",
            },
            "type": "STEP-HTML",
          },
        ],
        "title": "Paired Practice",
      },
    }
  }
  projector={true}
  selected_submission_order={
    Array [
      "student",
    ]
  }
  selected_submissions={
    Object {
      "student": true,
    }
  }
  studentCount={1}
  submissions={
    Object {
      "student": Object {
        "data": "Blah",
        "timestamp": "2020-06-15T20:02:41.677Z",
      },
    }
  }
>
  <div
    className="fill-in-the-blank student-slide-wrapper"
  >
    <div
      className="all-but-submitted-bar"
    >
      <ProjectorHeader
        studentCount={1}
        submissions={
          Object {
            "student": Object {
              "data": "Blah",
              "timestamp": "2020-06-15T20:02:41.677Z",
            },
          }
        }
      >
        <div
          className="projector-header-section"
        >
          <div
            className="students-type-tag tag"
          >
            <img
              alt="Laptop Icon"
              src="undefined/images/icons/laptop-glyph.svg"
            />
            <span>
              Students type response
            </span>
          </div>
          <p
            className="answered-count"
          >
            1 of 1 have responded
          </p>
        </div>
      </ProjectorHeader>
      <PromptSection
        promptElement={
          <div
            className="prompt"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "We&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "waited&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "in&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "line&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "at&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "the&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "store.&nbsp;",
                }
              }
            />
            <input
              aria-label="Complete the sentence with one of the following options: the, a"
              autoComplete="off"
              className="disabled"
              disabled={true}
              id="input0"
              onChange={[Function]}
              style={
                Object {
                  "width": "70px",
                }
              }
              type="text"
              value=""
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "line&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "was&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "very&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "long!&nbsp;",
                }
              }
            />
          </div>
        }
      >
        <div
          className="prompt"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "We&nbsp;",
              }
            }
            key="We0"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "waited&nbsp;",
              }
            }
            key="waited1"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "in&nbsp;",
              }
            }
            key="in2"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "line&nbsp;",
              }
            }
            key="line3"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "at&nbsp;",
              }
            }
            key="at4"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "the&nbsp;",
              }
            }
            key="the5"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "store.&nbsp;",
              }
            }
            key="store.6"
          />
          <input
            aria-label="Complete the sentence with one of the following options: the, a"
            autoComplete="off"
            className="disabled"
            disabled={true}
            id="input0"
            key="100"
            onChange={[Function]}
            style={
              Object {
                "width": "70px",
              }
            }
            type="text"
            value=""
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "line&nbsp;",
              }
            }
            key="line0"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "was&nbsp;",
              }
            }
            key="was1"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "very&nbsp;",
              }
            }
            key="very2"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "long!&nbsp;",
              }
            }
            key="long!3"
          />
        </div>
      </PromptSection>
      <Cues
        cues={
          Array [
            "the",
            "a",
          ]
        }
        displayArrowAndText={true}
      >
        <div
          className="cues"
        >
          <Cue
            cue="the"
            key="0the"
          >
            <div
              className="cue"
            >
              the
            </div>
          </Cue>
          <Cue
            cue="a"
            key="1a"
          >
            <div
              className="cue"
            >
              a
            </div>
          </Cue>
          <img
            alt="Arrow Icon"
            src="undefined/images/icons/pointing-arrow.svg"
          />
          <CueExplanation
            text="choose one"
          >
            <div
              className="cue-explanation"
            >
              choose one
            </div>
          </CueExplanation>
        </div>
      </Cues>
      <Feedback
        feedback={
          <p
            dangerouslySetInnerHTML={
              Object {
                "__html": "Fill in the blank with one of the highlighted words.",
              }
            }
          />
        }
        feedbackType="default"
      >
        <div
          aria-live="assertive"
          className="student-feedback-container default"
          role="status"
        >
          <div
            className="feedback-row student-feedback-inner-container"
          >
            <img
              alt="Directions Icon"
              className="info"
              src="https://assets.quill.org/images/icons/direction.svg"
            />
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Fill in the blank with one of the highlighted words.",
                }
              }
            />
          </div>
        </div>
      </Feedback>
      <SubmitButton
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="question-button-group"
        >
          <button
            className="quill-button primary contained large focus-on-light disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Submit
          </button>
        </div>
      </SubmitButton>
    </div>
  </div>
</FillInTheBlank>
`;

exports[`FillInTheBlank component student view inactive renders 1`] = `
<FillInTheBlank
  data={
    Object {
      "play": Object {
        "cues": Array [
          "the",
          "a",
        ],
        "instructions": "Fill in the blank with one of the highlighted words.",
        "prompt": "We waited in line at the store. ___ line was very long!",
      },
      "teach": Object {
        "script": Array [
          Object {
            "data": Object {
              "body": "<p><strong>Say:</strong> Let’s practice. With your partner, decide whether to use <em>a</em> or <em>the</em> in this sentence. Discuss why as well.</p>",
              "heading": "Ask pairs to fill in the blank with \\"a\\" or \\"the.\\"",
            },
            "type": "STEP-HTML",
          },
          Object {
            "type": "T-REVIEW",
          },
          Object {
            "data": Object {
              "body": "<p><em>Ask students to share their explanations for why they chose “a” or why they chose “the.”</em></p>
<p><strong>Say: </strong>Thank you for sharing your ideas! As many of you explained, we use <em>the</em> here because we're talking about a specific line—the one we waited in! The sentence tells us which line we’re talking about.</p>",
              "heading": "Select 1 correct response and 1 incorrect responses to display and discuss. ",
            },
            "type": "STEP-HTML",
          },
        ],
        "title": "Paired Practice",
      },
    }
  }
  mode={null}
  selected_submission_order={null}
  selected_submissions={null}
  studentCount={1}
  submissions={null}
>
  <div
    className="fill-in-the-blank student-slide-wrapper"
  >
    <div
      className="all-but-submitted-bar"
    >
      <PromptSection
        mode={null}
        promptElement={
          <div
            className="prompt"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "We&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "waited&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "in&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "line&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "at&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "the&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "store.&nbsp;",
                }
              }
            />
            <input
              aria-label="Complete the sentence with one of the following options: the, a"
              autoComplete="off"
              className=""
              id="input0"
              onChange={[Function]}
              style={
                Object {
                  "width": "70px",
                }
              }
              type="text"
              value=""
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "line&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "was&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "very&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "long!&nbsp;",
                }
              }
            />
          </div>
        }
      >
        <div
          className="prompt"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "We&nbsp;",
              }
            }
            key="We0"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "waited&nbsp;",
              }
            }
            key="waited1"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "in&nbsp;",
              }
            }
            key="in2"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "line&nbsp;",
              }
            }
            key="line3"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "at&nbsp;",
              }
            }
            key="at4"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "the&nbsp;",
              }
            }
            key="the5"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "store.&nbsp;",
              }
            }
            key="store.6"
          />
          <input
            aria-label="Complete the sentence with one of the following options: the, a"
            autoComplete="off"
            className=""
            id="input0"
            key="100"
            onChange={[Function]}
            style={
              Object {
                "width": "70px",
              }
            }
            type="text"
            value=""
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "line&nbsp;",
              }
            }
            key="line0"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "was&nbsp;",
              }
            }
            key="was1"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "very&nbsp;",
              }
            }
            key="very2"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "long!&nbsp;",
              }
            }
            key="long!3"
          />
        </div>
      </PromptSection>
      <Cues
        cues={
          Array [
            "the",
            "a",
          ]
        }
        displayArrowAndText={true}
      >
        <div
          className="cues"
        >
          <Cue
            cue="the"
            key="0the"
          >
            <div
              className="cue"
            >
              the
            </div>
          </Cue>
          <Cue
            cue="a"
            key="1a"
          >
            <div
              className="cue"
            >
              a
            </div>
          </Cue>
          <img
            alt="Arrow Icon"
            src="undefined/images/icons/pointing-arrow.svg"
          />
          <CueExplanation
            text="choose one"
          >
            <div
              className="cue-explanation"
            >
              choose one
            </div>
          </CueExplanation>
        </div>
      </Cues>
      <Feedback
        feedback={
          <p
            dangerouslySetInnerHTML={
              Object {
                "__html": "Fill in the blank with one of the highlighted words.",
              }
            }
          />
        }
        feedbackType="default"
      >
        <div
          aria-live="assertive"
          className="student-feedback-container default"
          role="status"
        >
          <div
            className="feedback-row student-feedback-inner-container"
          >
            <img
              alt="Directions Icon"
              className="info"
              src="https://assets.quill.org/images/icons/direction.svg"
            />
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Fill in the blank with one of the highlighted words.",
                }
              }
            />
          </div>
        </div>
      </Feedback>
      <SubmitButton
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="question-button-group"
        >
          <button
            className="quill-button primary contained large focus-on-light disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Submit
          </button>
        </div>
      </SubmitButton>
    </div>
  </div>
</FillInTheBlank>
`;

exports[`FillInTheBlank component student view when an answer is being displayed renders 1`] = `
<FillInTheBlank
  data={
    Object {
      "play": Object {
        "cues": Array [
          "the",
          "a",
        ],
        "instructions": "Fill in the blank with one of the highlighted words.",
        "prompt": "We waited in line at the store. ___ line was very long!",
      },
      "teach": Object {
        "script": Array [
          Object {
            "data": Object {
              "body": "<p><strong>Say:</strong> Let’s practice. With your partner, decide whether to use <em>a</em> or <em>the</em> in this sentence. Discuss why as well.</p>",
              "heading": "Ask pairs to fill in the blank with \\"a\\" or \\"the.\\"",
            },
            "type": "STEP-HTML",
          },
          Object {
            "type": "T-REVIEW",
          },
          Object {
            "data": Object {
              "body": "<p><em>Ask students to share their explanations for why they chose “a” or why they chose “the.”</em></p>
<p><strong>Say: </strong>Thank you for sharing your ideas! As many of you explained, we use <em>the</em> here because we're talking about a specific line—the one we waited in! The sentence tells us which line we’re talking about.</p>",
              "heading": "Select 1 correct response and 1 incorrect responses to display and discuss. ",
            },
            "type": "STEP-HTML",
          },
        ],
        "title": "Paired Practice",
      },
    }
  }
  selected_submission_order={
    Array [
      "student",
    ]
  }
  selected_submissions={
    Object {
      "student": true,
    }
  }
  studentCount={1}
  submissions={
    Object {
      "student": Object {
        "data": "Blah",
        "timestamp": "2020-06-15T20:02:41.677Z",
      },
    }
  }
>
  <div
    className="fill-in-the-blank student-slide-wrapper"
  >
    <div
      className="all-but-submitted-bar"
    >
      <PromptSection
        promptElement={
          <div
            className="prompt"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "We&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "waited&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "in&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "line&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "at&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "the&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "store.&nbsp;",
                }
              }
            />
            <input
              aria-label="Complete the sentence with one of the following options: the, a"
              autoComplete="off"
              className=""
              id="input0"
              onChange={[Function]}
              style={
                Object {
                  "width": "70px",
                }
              }
              type="text"
              value=""
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "line&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "was&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "very&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "long!&nbsp;",
                }
              }
            />
          </div>
        }
      >
        <div
          className="prompt"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "We&nbsp;",
              }
            }
            key="We0"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "waited&nbsp;",
              }
            }
            key="waited1"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "in&nbsp;",
              }
            }
            key="in2"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "line&nbsp;",
              }
            }
            key="line3"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "at&nbsp;",
              }
            }
            key="at4"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "the&nbsp;",
              }
            }
            key="the5"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "store.&nbsp;",
              }
            }
            key="store.6"
          />
          <input
            aria-label="Complete the sentence with one of the following options: the, a"
            autoComplete="off"
            className=""
            id="input0"
            key="100"
            onChange={[Function]}
            style={
              Object {
                "width": "70px",
              }
            }
            type="text"
            value=""
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "line&nbsp;",
              }
            }
            key="line0"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "was&nbsp;",
              }
            }
            key="was1"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "very&nbsp;",
              }
            }
            key="very2"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "long!&nbsp;",
              }
            }
            key="long!3"
          />
        </div>
      </PromptSection>
      <Cues
        cues={
          Array [
            "the",
            "a",
          ]
        }
        displayArrowAndText={true}
      >
        <div
          className="cues"
        >
          <Cue
            cue="the"
            key="0the"
          >
            <div
              className="cue"
            >
              the
            </div>
          </Cue>
          <Cue
            cue="a"
            key="1a"
          >
            <div
              className="cue"
            >
              a
            </div>
          </Cue>
          <img
            alt="Arrow Icon"
            src="undefined/images/icons/pointing-arrow.svg"
          />
          <CueExplanation
            text="choose one"
          >
            <div
              className="cue-explanation"
            >
              choose one
            </div>
          </CueExplanation>
        </div>
      </Cues>
      <Feedback
        feedback={
          <p
            dangerouslySetInnerHTML={
              Object {
                "__html": "Fill in the blank with one of the highlighted words.",
              }
            }
          />
        }
        feedbackType="default"
      >
        <div
          aria-live="assertive"
          className="student-feedback-container default"
          role="status"
        >
          <div
            className="feedback-row student-feedback-inner-container"
          >
            <img
              alt="Directions Icon"
              className="info"
              src="https://assets.quill.org/images/icons/direction.svg"
            />
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Fill in the blank with one of the highlighted words.",
                }
              }
            />
          </div>
        </div>
      </Feedback>
      <SubmitButton
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="question-button-group"
        >
          <button
            className="quill-button primary contained large focus-on-light disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Submit
          </button>
        </div>
      </SubmitButton>
    </div>
  </div>
</FillInTheBlank>
`;

exports[`FillInTheBlank component student view when the student has submitted an answer renders 1`] = `
<FillInTheBlank
  data={
    Object {
      "play": Object {
        "cues": Array [
          "the",
          "a",
        ],
        "instructions": "Fill in the blank with one of the highlighted words.",
        "prompt": "We waited in line at the store. ___ line was very long!",
      },
      "teach": Object {
        "script": Array [
          Object {
            "data": Object {
              "body": "<p><strong>Say:</strong> Let’s practice. With your partner, decide whether to use <em>a</em> or <em>the</em> in this sentence. Discuss why as well.</p>",
              "heading": "Ask pairs to fill in the blank with \\"a\\" or \\"the.\\"",
            },
            "type": "STEP-HTML",
          },
          Object {
            "type": "T-REVIEW",
          },
          Object {
            "data": Object {
              "body": "<p><em>Ask students to share their explanations for why they chose “a” or why they chose “the.”</em></p>
<p><strong>Say: </strong>Thank you for sharing your ideas! As many of you explained, we use <em>the</em> here because we're talking about a specific line—the one we waited in! The sentence tells us which line we’re talking about.</p>",
              "heading": "Select 1 correct response and 1 incorrect responses to display and discuss. ",
            },
            "type": "STEP-HTML",
          },
        ],
        "title": "Paired Practice",
      },
    }
  }
  mode={null}
  selected_submission_order={null}
  selected_submissions={null}
  studentCount={1}
  submissions={
    Object {
      "student": Object {
        "data": "Blah",
        "timestamp": "2020-06-15T20:02:41.677Z",
      },
    }
  }
>
  <div
    className="fill-in-the-blank student-slide-wrapper"
  >
    <div
      className="all-but-submitted-bar"
    >
      <PromptSection
        mode={null}
        promptElement={
          <div
            className="prompt"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "We&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "waited&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "in&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "line&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "at&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "the&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "store.&nbsp;",
                }
              }
            />
            <input
              aria-label="Complete the sentence with one of the following options: the, a"
              autoComplete="off"
              className=""
              id="input0"
              onChange={[Function]}
              style={
                Object {
                  "width": "70px",
                }
              }
              type="text"
              value=""
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "line&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "was&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "very&nbsp;",
                }
              }
            />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "long!&nbsp;",
                }
              }
            />
          </div>
        }
      >
        <div
          className="prompt"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "We&nbsp;",
              }
            }
            key="We0"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "waited&nbsp;",
              }
            }
            key="waited1"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "in&nbsp;",
              }
            }
            key="in2"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "line&nbsp;",
              }
            }
            key="line3"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "at&nbsp;",
              }
            }
            key="at4"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "the&nbsp;",
              }
            }
            key="the5"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "store.&nbsp;",
              }
            }
            key="store.6"
          />
          <input
            aria-label="Complete the sentence with one of the following options: the, a"
            autoComplete="off"
            className=""
            id="input0"
            key="100"
            onChange={[Function]}
            style={
              Object {
                "width": "70px",
              }
            }
            type="text"
            value=""
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "line&nbsp;",
              }
            }
            key="line0"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "was&nbsp;",
              }
            }
            key="was1"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "very&nbsp;",
              }
            }
            key="very2"
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "long!&nbsp;",
              }
            }
            key="long!3"
          />
        </div>
      </PromptSection>
      <Cues
        cues={
          Array [
            "the",
            "a",
          ]
        }
        displayArrowAndText={true}
      >
        <div
          className="cues"
        >
          <Cue
            cue="the"
            key="0the"
          >
            <div
              className="cue"
            >
              the
            </div>
          </Cue>
          <Cue
            cue="a"
            key="1a"
          >
            <div
              className="cue"
            >
              a
            </div>
          </Cue>
          <img
            alt="Arrow Icon"
            src="undefined/images/icons/pointing-arrow.svg"
          />
          <CueExplanation
            text="choose one"
          >
            <div
              className="cue-explanation"
            >
              choose one
            </div>
          </CueExplanation>
        </div>
      </Cues>
      <Feedback
        feedback={
          <p
            dangerouslySetInnerHTML={
              Object {
                "__html": "Fill in the blank with one of the highlighted words.",
              }
            }
          />
        }
        feedbackType="default"
      >
        <div
          aria-live="assertive"
          className="student-feedback-container default"
          role="status"
        >
          <div
            className="feedback-row student-feedback-inner-container"
          >
            <img
              alt="Directions Icon"
              className="info"
              src="https://assets.quill.org/images/icons/direction.svg"
            />
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Fill in the blank with one of the highlighted words.",
                }
              }
            />
          </div>
        </div>
      </Feedback>
      <SubmitButton
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="question-button-group"
        >
          <button
            className="quill-button primary contained large focus-on-light disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Submit
          </button>
        </div>
      </SubmitButton>
    </div>
  </div>
</FillInTheBlank>
`;
